Fix configuration parameterization in system-tests

--- a/chunkserver.properties.tmpl
+++ b/chunkserver.properties.tmpl
@@ -1,5 +1,4 @@
 cserver.datapath=DATA_PATH
-
-mysql.host=localhost
-mysql.username=akiba
-mysql.password=akibaDB
+mysql.host=MYSQL_HOST
+mysql.username=MYSQL_USERNAME
+mysql.password=MYSQL_PASSWORD
