Add cserver.host/port values as defaults from the chunkserver properties.

--- a/chunkserver.properties.tmpl
+++ b/chunkserver.properties.tmpl
@@ -2,3 +2,6 @@ cserver.datapath=DATA_PATH
 mysql.host=MYSQL_HOST
 mysql.username=MYSQL_USERNAME
 mysql.password=MYSQL_PASSWORD
+
+cserver.host=localhost
+cserver.port=8080
