--- a/src/main/resources/merge_join.vm
+++ b/src/main/resources/merge_join.vm
@@ -95,7 +95,7 @@ begin
                 , y_$column.name
 #end
             );
-#if (!$multipleYPerX)
+#if ($advanceXOnMatch)
             fetch x into
 #foreach ($column in $xTableColumns)
                 #comma_separator()x_$column.name
@@ -103,11 +103,13 @@ begin
             ;
 #end
             set x_more = more;
+#if ($advanceYOnMatch)
             fetch y into
 #foreach ($column in $yTableColumns)
                 #comma_separator()y_$column.name
 #end
             ;
+#end
             set y_more = more;
         elseif c > 0 then
             fetch y into
