Changed the bulk loader to use MyISAM for performance reasons.

--- a/src/main/resources/merge_join.vm
+++ b/src/main/resources/merge_join.vm
@@ -14,7 +14,7 @@ create table #quote_table_name($outputTableName)(
 #foreach ($column in $outputTableColumns)
     #comma_separator()$column.name $column.typeDescription
 #end
-) ~~
+) engine = myisam ~~
 
 drop procedure if exists `$procedureName` ~~
 
